--- a/globomantics/store/templates/store/list.html
+++ b/globomantics/store/templates/store/list.html
@@ -13,6 +13,8 @@
         <link rel="stylesheet" href="">
     </head>
     <body>
+        <h1> You've visited {{ request.COOKIES.visits|default:"1" }} times. </h1>
+
        {% for item in items %}
             <ul> {{ item|upper }} </ul>
         {% endfor %}
